# cic-stack

./: .env  .gitignore  .gitlab-ci.yml  README.md  docker-compose.auth.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-compose_local.yml  docker-stack.yml
apps/: requirements.txt
apps/cic-cache/: .coveragerc  .gitlab-ci.yml  CHANGELOG  Dockerfile  docker-compose.yaml  requirements.txt  setup.cfg  test_requirements.txt
apps/cic-cache/cic_cache/: api.py  cache.py  version.py
apps/cic-cache/cic_cache/cli/: arg.py  config.py
apps/cic-cache/cic_cache/db/: __init__.py  list.py
apps/cic-cache/cic_cache/db/migrations/default/versions/: 63b629f14a85_.py
apps/cic-cache/cic_cache/db/models/: base.py
apps/cic-cache/cic_cache/runnable/: server.py  tracker.py
apps/cic-cache/cic_cache/runnable/daemons/: query.py  server.py  tasker.py  tracker.py
apps/cic-cache/cic_cache/runnable/daemons/filters/: base.py  erc20.py  faucet.py
apps/cic-cache/cic_cache/tasks/: tx.py
apps/cic-cache/db/psycopg2/: db.sql
apps/cic-cache/db/pysqlite/: db.sql
apps/cic-cache/docker/: Dockerfile  Dockerfile_ci  start_server.sh  start_tasker.sh  start_tracker.sh
apps/cic-cache/scripts/: migrate.py
apps/cic-cache/tests/: conftest.py  fixtures_database.py  test_account_tokens.py  test_api.py  test_cache.py  test_query.py
ci_templates/: .cic-template.yml
docs/: bootstrap.md
kubernetes/: cic-imagepolicy.yaml  cic-imagerepositories.yaml  gitlab-internal-integration-registry-sealedsecret-flux.yaml  grassroots-ingress.yaml  pub-sealed-secrets.pem  (+4 more)
(+491 files in other folders)
