[metadata]
name = cic-cache
version = 0.1.1
description = CIC Cache API and server
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/grassrootseconomics/cic-eth
keywords =
	cic
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
packages = 
	cic_cache
	cic_cache.db
	cic_cache.db.models
	cic_cache.runnable
install_requires =
	alembic==1.4.2
	web3==5.12.2
	confini==0.3.2
	cic-registry==0.3.9
	moolb==0.1.0
	SQLAlchemy==1.3.19
	psycopg2==2.8.6
tests_require = 
	pytest==6.0.1
	pytest-cov==2.10.1
	pysqlite==0.4.3
	sqlparse==0.4.1
dependency_links =
        https://pip.grassrootseconomics.net:8433/cic-registry
scripts =
	./scripts/migrate.py

[options.extras_require]
server = uWSGI==2.0.19.1

[options.entry_points]
console_scripts =
	cic-cache-tracker = cic_cache.runnable.tracker:main
